--- a/Cafeine/Views/SearchPage.xaml
+++ b/Cafeine/Views/SearchPage.xaml
@@ -42,7 +42,7 @@
             <StackPanel
                 x:Name="results"
                 Margin="8,0,0,0"
-                x:Load="{x:Bind Vm.LoadResults.Value, Mode=OneWay}"
+                x:Load="{x:Bind Vm.LoadResults, Mode=OneWay}"
                 Background="{ThemeResource LegacyDarkBlue}"
                 Orientation="Vertical">
                 <StackPanel
@@ -58,7 +58,7 @@
                 <TextBlock
                     x:Name="offlinenomatches"
                     Margin="0,0,0,28"
-                    x:Load="{x:Bind Vm.OfflineResultsNoMatches.Value, Mode=OneWay}"
+                    x:Load="{x:Bind Vm.OfflineResultsNoMatches, Mode=OneWay}"
                     Opacity="0.8"
                     Text="No matches found." />
                 <Grid Margin="0,8,28,8">
@@ -110,7 +110,7 @@
                 </StackPanel>
                 <TextBlock
                     x:Name="onlinenomatches"
-                    x:Load="{x:Bind Vm.OnlineResultsNoMatches.Value, Mode=OneWay}"
+                    x:Load="{x:Bind Vm.OnlineResultsNoMatches, Mode=OneWay}"
                     Opacity="0.8"
                     Text="No matches found." />
                 <GridView
@@ -122,7 +122,7 @@
                     ItemTemplate="{StaticResource OnlineSearchResult}"
                     ItemsSource="{x:Bind Vm.OnlineResults, Mode=OneWay}"
                     SizeChanged="Onlineresultgridview_SizeChanged" />
-                <ProgressRing HorizontalAlignment="Left" IsActive="{x:Bind Vm.OnlineResultsProgressRing.Value, Mode=OneWay}" />
+                <ProgressRing HorizontalAlignment="Left" IsActive="{x:Bind Vm.OnlineResultsProgressRing, Mode=OneWay}" />
             </StackPanel>
 
         </ScrollViewer>
