Split view resources for better maintainabililty.

--- a/Cafeine/Views/ItemDetailsPage.xaml
+++ b/Cafeine/Views/ItemDetailsPage.xaml
@@ -15,6 +15,9 @@
     <Page.DataContext>
         <vm:ItemDetailsViewModel />
     </Page.DataContext>
+    <Page.Resources>
+        <r:ItemDetailsPage/>
+    </Page.Resources>
     <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
