--- a/Cafeine/Views/Resources/ItemDetailsPageResource.xaml
+++ b/Cafeine/Views/Resources/ItemDetailsPageResource.xaml
@@ -4,6 +4,7 @@
     x:Class="Cafeine.Views.Resources.ItemDetailsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:md="using:Microsoft.UI.Xaml.Media"
     xmlns:local="using:Cafeine.Views.Resources">
     <ControlTemplate x:Key="CafeineSplitView" TargetType="SplitView">
         <Grid Background="{TemplateBinding Background}">
@@ -743,4 +744,15 @@
         </Grid>
 
     </ControlTemplate>
+    <Style x:Key="ItemDetailsListItemContainerStyle" TargetType="GridViewItem">
+        <Setter Property="Margin" Value="0,0,8,18" />
+        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        <Setter Property="ContentTransitions">
+            <Setter.Value>
+                <TransitionCollection>
+                    <EntranceThemeTransition IsStaggeringEnabled="True" />
+                </TransitionCollection>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
