--- a/Cafeine/Views/ItemDetailsPage.xaml
+++ b/Cafeine/Views/ItemDetailsPage.xaml
@@ -351,7 +351,7 @@
                             ItemContainerStyle="{StaticResource ItemDetailsListItemContainerStyle}"
                             Visibility="{x:Bind Path=Vm.LoadEpisodeLists, Mode=OneWay}">
                             <GridView.ItemTemplate>
-                                <DataTemplate x:DataType="model:ContentList">
+                                <DataTemplate x:DataType="model:MediaList">
                                     <r:ItemDetailsList contentlist="{x:Bind}" />
                                 </DataTemplate>
                             </GridView.ItemTemplate>
