Implement more conditions for ItemDetailsList Initial Implementation of tag-based database

--- a/Cafeine/Views/Resources/ItemDetailsList.xaml
+++ b/Cafeine/Views/Resources/ItemDetailsList.xaml
@@ -36,12 +36,52 @@
                         </DoubleAnimation>
                     </Storyboard>
                 </VisualState>
+                <VisualState x:Name="MediaDescNormal">
+                    <Storyboard>
+                        <DoubleAnimation 
+                            Storyboard.TargetName="MediaList" 
+                            Storyboard.TargetProperty="Opacity" 
+                            From="1" To="0"
+                            Duration="0:0:0.3">
+                            <DoubleAnimation.EasingFunction>
+                                <ExponentialEase EasingMode="EaseOut" Exponent="5" />
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                        <DoubleAnimation Storyboard.TargetName="MediaDesc"
+                                         Storyboard.TargetProperty="Opacity" From="0" To="1"
+                            Duration="0:0:0.3">
+                            <DoubleAnimation.EasingFunction>
+                                <ExponentialEase EasingMode="EaseOut" Exponent="5" />
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                    </Storyboard>
+                </VisualState>
                 <VisualState x:Name="PointerOver">
                     <Storyboard>
                         <DoubleAnimation 
                             Storyboard.TargetName="MediaList" 
                             Storyboard.TargetProperty="Opacity" 
                             From="0" To="1"
+                            Duration="0:0:0.3">
+                            <DoubleAnimation.EasingFunction>
+                                <ExponentialEase EasingMode="EaseOut" Exponent="5" />
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                    </Storyboard>
+                </VisualState>
+                <VisualState x:Name="MediaDescPointerOver">
+                    <Storyboard>
+                        <DoubleAnimation 
+                            Storyboard.TargetName="MediaList" 
+                            Storyboard.TargetProperty="Opacity" 
+                            From="0" To="1"
+                            Duration="0:0:0.3">
+                            <DoubleAnimation.EasingFunction>
+                                <ExponentialEase EasingMode="EaseOut" Exponent="5" />
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                        <DoubleAnimation Storyboard.TargetName="MediaDesc"
+                                         Storyboard.TargetProperty="Opacity" From="1" To="0"
                             Duration="0:0:0.3">
                             <DoubleAnimation.EasingFunction>
                                 <ExponentialEase EasingMode="EaseOut" Exponent="5" />
@@ -61,6 +101,7 @@
             Opacity="1"
             Stretch="UniformToFill" />
         <StackPanel
+            x:Name="MediaDesc"
             MaxWidth="180"
             Margin="4"
             RelativePanel.Below="Thumbnail">
@@ -78,9 +119,8 @@
             Width="180"
             Height="144"
             x:Load="False"
-            Opacity="0"
-            Background="#4C000000">
-            <RelativePanel Grid.Row="0" Height="80">
+            Opacity="0">
+            <RelativePanel Grid.Row="0" Height="80" Background="#E6000000">
                 <TextBlock
                     x:Name="MainMediaListTitle"
                     Tapped="{x:Bind MainMediaList.Clicked}"
@@ -90,12 +130,7 @@
             <GridView x:Name="StreamServiceGrid">
                 <GridView.ItemTemplate>
                     <DataTemplate x:DataType="sm:IMediaList">
-                        <Button
-                            Width="40"
-                            Height="40"
-                            dt:DesignTime.Content="C"
-                            Click="{x:Bind Clicked}"
-                            Content="{x:Bind Source}" />
+                        <AppBarButton Click="{x:Bind Clicked}" Width="40" Height="40" ToolTipService.ToolTip="{x:Bind Source}"/>
                     </DataTemplate>
                 </GridView.ItemTemplate>
             </GridView>
